--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div class="container">
       <h1>Me</h1>
       <div class="photo-profile">
+        <img src="img/perfil.jpg" alt=""
+        width="7%"
+        height="7%">
      </div>
       <div>
       <ul>
