--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <h2>About me</h2>
       <p>
-        I'm a Software Developer student in Chaco, Argentina. I like programing, I like technology, in my free times i like play paddle.
+        I'm a Software Development student in Chaco, Argentina. I like programing, I like technology, in my free times i like play paddle.
       </p>
     </div>
     <hr>
@@ -60,7 +60,7 @@
          <div class="label">
             <label for="mensaje">Message:</label>
             <br>
-            <textarea name="mensaje" id="mensaje" cols="80" rows="5"></textarea>
+            <textarea name="mensaje" id="mensaje" cols="50" rows="10"></textarea>
          </div>
          <input type="submit" value="Send">
     </div>
