--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <h2>About me</h2>
       <p>
-        I'm a Software Development student in Chaco, Argentina. I like programing, I like technology, in my free times i like play paddle.
+        I'm a Software Development student in Chaco, Argentina. I like programing, I like technology, in my free times I like play paddle.
       </p>
     </div>
     <hr>
