--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
   </head>
   <body>
     
-      <header>
-      <div class="header">
-        <nav>
-          <ul>
+      <header class="header">
+        <nav class="navbar">
+          <ul class="ul">
             <li><a href="#">Me</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Hire me</a></li>
           </ul>
         </nav>
-      </div>
     </header>
     <main>
     <div class="container">
